--- a/intex.html
+++ b/intex.html
@@ -4,6 +4,6 @@
 <h1>Nitthishri-portfolio</h1>
 <h3>about me</h3>
 <hr>
-<p>Hi This is Nitthishri a student of FSSA
+<p>Hi This is Nitthishri a student of FSSA</p>
 </body>
 </html>
