--- a/intex.html
+++ b/intex.html
@@ -1,5 +1,5 @@
 <html>
-<head> Nitthishri-portfolio</head>
+  <head> <title>Nitthishri-portfolio</title></head>
 <body>
 <h1>Nitthishri-portfolio</h1>
 <h3>about me</h3>
