--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
+<!DOCTYPE>
 <html>
-  <head> <title>Nitthishri-portfolio</title></head>
+<head>
+<style>
+ body{
+ background-image:url("images/bgimage2.jpg");
+ }
+</style>
+<title>About me</title>
+<link rel="stylesheet" href="css1/style.css">
+</head>
 <body>
-<h1>Nitthishri-portfolio</h1>
-<h3>about me</h3>
-<hr>
-<p>Hi This is Nitthishri a student of FSSA</p>
+
+<div class="main">
+<div class="main-content">
+
+<img class="image" src="images/nitthi.jpg" alt="nitthi" height="500px" width="500px">
+</div>
+<div class="content">
+<h6>All about me!</h6>
+
+<h1> <em>Nitthishri.S</em>  </h1>
+<p>hi, I am Nitthishri.My hown town is Erode.I am a student of <span> Freshworks software academy</span>.</p> 
+
+
+<h2>My hobbies :</h2>
+<ul>
+    <li>drawing</li>
+    <li>reading books</li>
+    <li>crochet</li>
+    <li>travelling</li>
+    <li>hearing songs</li>
+</ul>
+<a  href="hobbies.html" alt="my drawing">my work</a>
+</div>
+
+
+</div>
 </body>
 </html>
