--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 <style>
  body{
- background-image:url("images/bgimage2.jpg");
+ background-image:url("bgimage2.jpg");
  }
 </style>
 <title>About me</title>
-<link rel="stylesheet" href="css1/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="main">
 <div class="main-content">
 
-<img class="image" src="images/nitthi.jpg" alt="nitthi" height="500px" width="500px">
+<img class="image" src="nitthi.jpg" alt="nitthi" height="500px" width="500px">
 </div>
 <div class="content">
 <h6>All about me!</h6>
