--- a/hobbies.html
+++ b/hobbies.html
@@ -1,11 +1,11 @@
 <!DOCTYPE>
 <html>
 <head>
-<link rel="stylesheet" href="css1/style1.css">
+<link rel="stylesheet" href="style1.css">
 
 <style>
 body{
- background-image:url("images/bg5.jpg");
+ background-image:url("bg5.jpg");
  height:100%;
  backround-repeat:no-repeat;
  backround-size:cover;
@@ -20,20 +20,20 @@ body{
 
 </div>
 <figure>
-<img src="arts/draw1.JPG" alt="draw1" height="400px" width="400px">
-<img src="arts/draw2.JPG" alt="draw2" height="400px" width="400px">
-<img src="arts/draw3.JPG" alt="draw3" height="400px" width="400px" >
-<img src="arts/draw4.JPG" alt="draw4" height="400px" width="400px">
-<img src="arts/draw5.JPG" alt="draw5" height="400px" width="400px" >
-<img src="arts/draw6.JPG" alt="draw6" height="400px" width="400px">
-<img src="arts/draw7.JPG" alt="draw7"  height="400px" width="400px">
-<img src="arts/draw8.JPG" alt="draw8" height="400px" width="400px">
-<img src="arts/draw9.JPG" alt="draw9" height="400px" width="400px">
-<img src="arts/draw10.JPG" alt="draw10" height="400px" width="400px">
-<img src="arts/draw11.JPG" alt="draw11" height="400px" width="400px">
-<img src="arts/draw12.JPG" alt="draw12" height="400px" width="400px">
-<img src="arts/draw13.JPG" alt="draw13" height="400px" width="400px">
-<img src="arts/draw14.JPG" alt="draw14" height="400px" width="400px">
+<img src="draw1.JPG" alt="draw1" height="400px" width="400px">
+<img src="draw2.JPG" alt="draw2" height="400px" width="400px">
+<img src="draw3.JPG" alt="draw3" height="400px" width="400px" >
+<img src="draw4.JPG" alt="draw4" height="400px" width="400px">
+<img src="draw5.JPG" alt="draw5" height="400px" width="400px" >
+<img src="draw6.JPG" alt="draw6" height="400px" width="400px">
+<img src="draw7.JPG" alt="draw7"  height="400px" width="400px">
+<img src="draw8.JPG" alt="draw8" height="400px" width="400px">
+<img src="draw9.JPG" alt="draw9" height="400px" width="400px">
+<img src="draw10.JPG" alt="draw10" height="400px" width="400px">
+<img src="draw11.JPG" alt="draw11" height="400px" width="400px">
+<img src="draw12.JPG" alt="draw12" height="400px" width="400px">
+<img src="draw13.JPG" alt="draw13" height="400px" width="400px">
+<img src="draw14.JPG" alt="draw14" height="400px" width="400px">
 
 </figure>
 
