--- a/hobbies.html
+++ b/hobbies.html
@@ -20,20 +20,20 @@ body{
 
 </div>
 <figure>
-<img src="draw1.JPG" alt="draw1" height="400px" width="400px">
-<img src="draw2.JPG" alt="draw2" height="400px" width="400px">
-<img src="draw3.JPG" alt="draw3" height="400px" width="400px" >
-<img src="draw4.JPG" alt="draw4" height="400px" width="400px">
-<img src="draw5.JPG" alt="draw5" height="400px" width="400px" >
-<img src="draw6.JPG" alt="draw6" height="400px" width="400px">
-<img src="draw7.JPG" alt="draw7"  height="400px" width="400px">
-<img src="draw8.JPG" alt="draw8" height="400px" width="400px">
-<img src="draw9.JPG" alt="draw9" height="400px" width="400px">
-<img src="draw10.JPG" alt="draw10" height="400px" width="400px">
-<img src="draw11.JPG" alt="draw11" height="400px" width="400px">
-<img src="draw12.JPG" alt="draw12" height="400px" width="400px">
-<img src="draw13.JPG" alt="draw13" height="400px" width="400px">
-<img src="draw14.JPG" alt="draw14" height="400px" width="400px">
+<img src="draw1.jpg" alt="draw1" height="400px" width="400px">
+<img src="draw2.jpg" alt="draw2" height="400px" width="400px">
+<img src="draw3.jpg" alt="draw3" height="400px" width="400px" >
+<img src="draw4.jpg" alt="draw4" height="400px" width="400px">
+<img src="draw5.jpg" alt="draw5" height="400px" width="400px" >
+<img src="draw6.jpg" alt="draw6" height="400px" width="400px">
+<img src="draw7.jpg" alt="draw7"  height="400px" width="400px">
+<img src="draw8.jpg" alt="draw8" height="400px" width="400px">
+<img src="draw9.jpg" alt="draw9" height="400px" width="400px">
+<img src="draw10.jpg" alt="draw10" height="400px" width="400px">
+<img src="draw11.jpg" alt="draw11" height="400px" width="400px">
+<img src="draw12.jpg" alt="draw12" height="400px" width="400px">
+<img src="draw13.jpg" alt="draw13" height="400px" width="400px">
+<img src="draw14.jpg" alt="draw14" height="400px" width="400px">
 
 </figure>
 
